--- a/public/views/index.html
+++ b/public/views/index.html
@@ -25,24 +25,8 @@
       <!-- Content here -->
     </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
 
+    
     <!--ここからbootstrapでの記述-->
     <!--menuボタン-->
     <input id="menu1" type="checkbox">
@@ -54,164 +38,42 @@
         <li><a href="#"><button type="button" class="btn btn-danger" data-toggle="modal" data-target="#Modal">削除</button></a></li>
     </ul>
     <label for="menu1">閉じる</label>
-</nav>
-  <section>
-      <label for="menu1" class="menu_btn">menu</label>
-  </section>
+    </nav>
+      <section>
+          <label for="menu1" class="menu_btn">menu</label>
+      </section>
     <!--menuボタン（終了）-->
         
     <!--todo名、期限、アラートのテーブル-->
       <table class="table table-striped">
-          <thead>
-              <tr>
-                  <th>　</th>
-                  <th>todo名</th>
-                  <th>期限</th>
-                  <th>アラート</th>
-              </tr>
-          </thead>
-          <tbody>
-              <tr>
-                  <td>1</td>
-                  <td>犬の散歩</td>
-                  <td>期限の入力</td>
-                  <th><input type="checkbox" class="toggle" /></th>   
-              </tr>
-              <tr>
-                  <td>2</td>
-                  <td>犬の餌の購入</td>
-                  <td>期限の入力</td>         
-                  <th><input type="checkbox" class="toggle" /></th>   
-              </tr>
-              <tr>
-                  <td>3</td>
-                  <td>掃除</td>
-                  <td>期限の入力</td>
-                  <th><input type="checkbox" class="toggle" /></th>   
-              </tr>
-              <tr>
-                <td></td>
-                <td>name</td>
-                <td>day</td>
-                <th>
-                  <input type="checkbox" class="toggle" />     
-                </th>   
-              </tr>
-              <tr>
-                <td></td>
-                <td>name</td>
-                <td>day</td>
-                <th>
-                  <input type="checkbox" class="toggle" />     
-                </th>   
-              </tr>
-
-              <tr>
-                <td></td>
-                <td>name</td>
-                <td>day</td>
-                <th>
-                  <input type="checkbox" class="toggle" />     
-                </th>   
-               </tr>
-
-              <tr>
-                <td></td>
-                <td>name</td>
-                <td>day</td>
-                <th>
-                  <input type="checkbox" class="toggle" />     
-                </th>   
-              </tr>
-
-              <tr>
-                <td></td>
-                <td>name</td>
-                <td>day</td>
-                <th>
-                  <input type="checkbox" class="toggle" />     
-                </th>   
-              </tr>
-              <tr>
-                <td></td>
-                <td>name</td>
-                <td>day</td>
-                <th>
-                  <input type="checkbox" class="toggle" />     
-                </th>   
-              </tr>
-              <tr>
-                <td></td>
-                <td>name</td>
-                <td>day</td>
-                <th>
-                  <input type="checkbox" class="toggle" />     
-                </th>   
-              </tr>
-              <tr>
-                <td></td>
-                <td>name</td>
-                <td>day</td>
-                <th>
-                  <input type="checkbox" class="toggle" />     
-              </th>   
-              <tr>
-                <td></td>
-                <td>name</td>
-                <td>day</td>
-                <th>
-                  <input type="checkbox" class="toggle" />     
-                </th>   
-              </tr>
-              <tr>
-                <td></td>
-                <td>name</td>
-                <td>day</td>
-                <th>
-                  <input type="checkbox" class="toggle" />     
-                </th>   
-              </tr>
-              <tr>
-                <td></td>
-                <td>name</td>
-                <td>day</td>
-                <th>
-                  <input type="checkbox" class="toggle" />     
-                </th>   
-              </tr>
-              <tr>
-                <td></td>
-                <td>name</td>
-                <td>day</td>
-                <th>
-                  <input type="checkbox" class="toggle" />     
-                </th>   
-              </tr>
-              <tr>
-                <td></td>
-                <td>name</td>
-                <td>day</td>
-                <th>
-                  <input type="checkbox" class="toggle" />     
-                </th>   
-              </tr>
-              <tr>
-                <td></td>
-                <td>name</td>
-                <td>day</td>
-                <th>
-                  <input type="checkbox" class="toggle" />     
-                </th>   
-              </tr>
-              <tr>
-                <td></td>
-                <td>name</td>
-                <td>day</td>
-                <th>
-                  <input type="checkbox" class="toggle" />     
-                </th>   
-              </tr>
-          </tbody>
+        <thead>
+          <tr>
+              <th></th>
+              <th>todo名</th>
+              <th>期限</th>
+              <th>アラート</th>
+          </tr>
+      </thead>
+      <tbody>
+          <tr>
+              <td>1</td>
+              <td>犬の散歩</td>
+              <td>期限の入力</td>
+              <th><input type="checkbox" class="toggle" /></th>   
+          </tr>
+          <tr>
+              <td>2</td>
+              <td>犬の餌の購入</td>
+              <td>期限の入力</td>         
+              <th><input type="checkbox" class="toggle" /></th>   
+          </tr>
+          <tr>
+              <td>3</td>
+              <td>掃除</td>
+              <td>期限の入力</td>
+              <th><input type="checkbox" class="toggle" /></th>   
+          </tr>
+      </tbody>
       </table>
     <!--todo名、期限、アラートのテーブル（終了）-->
 
@@ -223,7 +85,7 @@
 
     <!-- タスクの追加を押した場合 -->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
+      <div class="modal-dialog" role="document" id="create-form">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel">タスク登録</h5>
@@ -231,25 +93,25 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body">           
+          <div class="modal-body" >           
             <div class="form-group">
               <form>
-                <label for="Inputtask">タスク</label>
-                <input type="text" class="form-control" id="exampleInputtask"  placeholder="タスクを入力してください">
-                <label for="Inputdate" style="margin-top: 10px; margin-bottom: 10px;">期限</label>
-                <input type="text" class="form-control"  placeholder="期限を入力してください">
+                <label for="task">タスク</label>
+                <input type="text" class="form-control" name="task">
+                <label for="deadline" style="margin-top: 10px; margin-bottom: 10px;">期限</label>
+                <input type="text"  name="deadline" class="form-control">
                 <label style="margin-top: 10px; margin-bottom: 10px;">カテゴリ</label>
-                <select class = "form-control" name = "select" id="select">
-                  <option>勉強</option>
-                  <option>仕事</option>
-                  <option>家事</option>
+                <select class = "form-control" id="category" name = "category" >
+                  <option value="1">勉強</option>
+                  <option value="2">仕事</option>
+                  <option value="3">家事</option>
                 </select>
               </form>
             </div>           
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">キャンセル</button>
-            <button type="button" class="btn btn-primary">登録</button>
+            <button type="button" class="btn btn-primary" id="create-task">登録</button>
           </div>
         </div>
       </div>
@@ -347,23 +209,47 @@
       </div>
     </div>
     <!-- 削除を押しmodalを起動（終了） -->
+
+
+        <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+
+
+    <script src="../javascripts/index.js"></script>
+  
+
+
+    <script>
+      //登録ボタンを押下時
+      $("#creat-task").on("clisk", async function () {
+        const requestData = {
+          taskName: $("#create-form input[name=task]").val(),
+          deadline: $("#create-form input[name=deadline]").val(),
+          category: $("#create-form select[name=category]").val(),
+        };
+  
+        const responese = await httpPost(
+          "//" + window.location.host + "/api/tasks",
+          requestData
+        );
+        window.location.reload();
+      }); 
+    </script>
+
   </body>
-
-
-  <script src="../javascripts/index.js">
-  $("#creat-task").on("clisk", async function ()){
-    const requestData = {
-      taskName: $("#create-form input[name=task]").val(),
-      deadline: $("#create-form input[name=deadline]").val(),
-      category: $("#create-form select[name=category]").val(),
-    };
-
-    const responese = await httpPost(
-      "//" + window.location.host + "/api/tasks",
-      requestData
-    );
-    window.location.reload();
-  }
-
-</script>
 </html>
